# goodreadsAnaliticys

./: README.md  app.py  exemple.env  extract.py  informacoes_goodreadsanalitcys.txt  pyproject.toml
.github/workflows/: main_goodreadsanalitcys.yml
